@@ -50,7 +50,12 @@ project.ext.externalDependency = [
   'jacksonCoreAsl_1_8': 'org.codehaus.jackson:jackson-core-asl:1.8.8',
   'javaxInject': 'javax.inject:javax.inject:1',
   'jdkTools': files("${System.getProperty('java.home')}/../lib/tools.jar"),
-  'jetty': 'org.eclipse.jetty.aggregate:jetty-all:8.1.8.v20121106',
+  'jettyAlpnServer': 'org.eclipse.jetty:jetty-alpn-server:9.3.11.v20160721',
+  'jettyHttp': 'org.eclipse.jetty:jetty-http:9.3.11.v20160721',
+  'jettyHttp2Server': 'org.eclipse.jetty.http2:http2-server:9.3.11.v20160721',
+  'jettyServlet': 'org.eclipse.jetty:jetty-servlet:9.3.11.v20160721',
+  'jettyServer': 'org.eclipse.jetty:jetty-server:9.3.11.v20160721',
+  'jettyUtil': 'org.eclipse.jetty:jetty-util:9.3.11.v20160721',
   "jmhCore": "org.openjdk.jmh:jmh-core:1.11",
   "jmhAnnotations": "org.openjdk.jmh:jmh-generator-annprocess:1.11",
   'log4j2Api': 'org.apache.logging.log4j:log4j-api:2.0.2',
@@ -62,7 +67,7 @@ project.ext.externalDependency = [
   'parseq': 'com.linkedin.parseq:parseq:1.4.2',
   'parseq_tracevis': 'com.linkedin.parseq:parseq-tracevis:2.3.4',
   'parseq_restClient': 'com.linkedin.parseq:parseq-restli-client:2.3.4',
-  'servletApi': 'javax.servlet:javax.servlet-api:3.0.1',
+  'servletApi': 'javax.servlet:javax.servlet-api:3.1.0',
   'slf4jApi': 'org.slf4j:slf4j-api:1.6.2',
   'slf4jLog4j2': 'org.apache.logging.log4j:log4j-slf4j-impl:2.0.2',
   'snappy': 'org.iq80.snappy:snappy:0.3',
